--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,12 @@
 .hidden {
-  display: none;
+	display: none;
 }
 
 .visible {
-  display: block;
+	display: block;
+}
+
+.hero-name-display {
+	border-style: solid;
+	border-width: 5px;
 }
