--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,30 @@
 .visible {
   display: block;
 }
+
+body {
+  font-family: "Bangers", sans-serif;
+}
+
+header {
+width: 100%;
+background-image:url("./images/marvel.jpg");
+border: 3px;
+padding-top: 5px;
+}
+
+header h1 {
+  font-size: 100px;
+  color: red;
+  text-shadow: 2px 2px black;
+  text-align: center;
+}
+
+p {
+  text-align: bottom;
+  justify-content: center;
+  font-size: small;
+  text-align-last: center;
+  color: black;
+padding-top: 5px;
+}
