--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,11 @@
 .visible {
   display: block;
 }
+
+header-img {
+  display: block;
+  max-width:230px;
+  max-height:95px;
+  width: auto;
+  height: auto;
+}
